# Genesis-25

./: CMakeLists.txt  README.md  build.sh  dependencies.txt  run.sh  run.txt  setup.sh  vcpkg.json
data/: accounts.txt  users.db  users.txt
include/: Account.hpp  Application.hpp  BankSystem.hpp  Database.hpp  Loan.hpp  Transaction.hpp  User.hpp
src/: Account.cpp  Application.cpp  BankSystem.cpp  Database.cpp  Loan.cpp  Transaction.cpp  User.cpp  main.cpp
